added japanese version of the abridge article

--- a/index.html
+++ b/index.html
@@ -1139,12 +1139,13 @@
 
     <h2>9 &nbsp; Special Thanks</h2>
 
-		<p>I would like to thank <a href="https://www.linkedin.com/in/andrewluchen">Andrew Chen</a>, <a href="https://ekapolc.github.io/">Ekapol Chuangsuwanich</a>, <a href="https://aixile.github.io/">Yanghua Jin</a>, <a href="https://minjun.li/">Minjun Li</a>, <a href="https://ppasupat.github.io/">Panupong Pasupat</a>, <a href="https://alantian.net/">Yingtao Tian</a>, and <a href="https://puchupala.com/">Pongsakorn U-chupala</a> for their comments.</p>
+		<p>I would like to thank <a href="https://www.linkedin.com/in/andrewluchen">Andrew Chen</a>, <a href="https://ekapolc.github.io/">Ekapol Chuangsuwanich</a>, <a href="https://aixile.github.io/">Yanghua Jin</a>, <a href="https://minjun.li/">Minjun Li</a>,Uehara Mamoru, <a href="https://twitter.com/alitaso346">Alice Maruyama</a>, <a href="https://ppasupat.github.io/">Panupong Pasupat</a>, <a href="https://alantian.net/">Yingtao Tian</a>, and <a href="https://puchupala.com/">Pongsakorn U-chupala</a> for their comments.</p>
 
     <hr>
     <b>Update History</b>
     <ul>
         <li>2022/06/06: First publication.</li>
+        <li>2022/07/21: Added <a href="index-ja.html">Japanese version</a>.</li>
     </ul>
 
     <hr>
